[package]
name = "kensa-android"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT"
authors = ["pleme-io"]
repository = "https://github.com/pleme-io/kensa-android"
homepage = "https://github.com/pleme-io/kensa-android"
description = "Android compliance runner implementing NIST 800-53 control mapping"

[lib]
name = "kensa_android"
path = "src/lib.rs"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
